Fixed status report & menu collapse issue.

--- a/priv/static/css/personal.css
+++ b/priv/static/css/personal.css
@@ -647,3 +647,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 }
 
+.m-menu__link .m-menu__link-icon{
+  color: red
+}
+
